# Compiler2019

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  docker-compose.yml  makefile  run_tests.sh
Assembler/: CMakeLists.txt
BisonBuilder/: CMakeLists.txt  parser.yy  scanner.ll
BisonBuilder/include/: BisonBuilder.h  Builder.h
BisonBuilder/src/: BisonBuilder.cpp  Builder.cpp
FlexBuilder/: CMakeLists.txt  scanner.ll
FlexBuilder/include/: FlexAnalyzerBuilder.h
FlexBuilder/src/: FlexAnalyzerBuilder.cpp
IRTree/: CMakeLists.txt
IRTree/Visitors/: CMakeLists.txt
IRTree/Visitors/include/: IRTreeBlockBuilder.h  IRTreeBlockPrinter.h  IRTreeCallCanonizator.h  IRTreeCanonizator.h  IRTreeESeqCanonizator.h  IRTreeFinalLinearisator.h  IRTreeLinearisator.h  IRTreePrinter.h  IRTreeTraceBuilder.h  IRVisitors.h
IRTree/Visitors/src/: IRTreeBlockBuilder.cpp  IRTreeBlockPrinter.cpp  IRTreeCallCanonizator.cpp  IRTreeCanonizator.cpp  IRTreeESeqCanonizator.cpp  IRTreeFinalLinearisator.cpp  IRTreePrinter.cpp  IRTreeTraceBuilder.cpp  IrTreeLinearisator.cpp
IRTree/include/: IRTreeNode.h  IRTreeStatements.h  IRTreeTranslator.h  IRTreeVisitor.h
IRTree/include/ExpressionNode/: ExpressionBinaryOperationNode.h  ExpressionCallNode.h  ExpressionConstNode.h  ExpressionESeqNode.h  ExpressionList.h  ExpressionLocalNode.h  ExpressionMemoryNode.h  ExpressionNameNode.h  ExpressionTempNode.h  ExpressionTypeNode.h  IExpressionNode.h
IRTree/include/IRTree/: INodeBase.h  IRTree.h  IRTreeGoal.h  IRTreeTypeDef.h  IRTreeWrappers.h  IVisitor.h  Nodes.h
IRTree/include/LabelNode/: LabelNode.h
IRTree/include/StatementNode/: IStatementNode.h  StatementCJumpNode.h  StatementExpressionNode.h  StatementJumpNode.h  StatementLabelNode.h  StatementList.h  StatementMoveNode.h  StatementSeqNode.h
IRTree/include/TempNode/: TempNode.h
IRTree/include/Visitors/: IRTreePrinter.h
IRTree/include/Wrapper/: IWrapper.h  Wrapper.h
IRTree/include/Wrapper/Expression/: WrapperExpressionAnd.h  WrapperExpressionBinaryOperation.h  WrapperExpressionNot.h
IRTree/src/: IRTreeTranslator.cpp
IRTree/src/IRTree/: IRTreeWrappers.cpp  Nodes.cpp
IRTree/src/Wrapper/Expression/: WrapperExpressionAnd.cpp
LexicalAnalyz/: CMakeLists.txt  scanner.ll
LexicalAnalyz/include/: FlexAnalyzerBuilder.h  LexicalAnalyz.h  LexicalAnalyzer.h  Tokens.h
LexicalAnalyz/src/: FlexAnalyzerBuilder.cpp  LexicalAnalyz.cpp  LexicalAnalyzer.cpp
SymbolTable/: CMakeLists.txt
SymbolTable/Graphviz/: CMakeLists.txt
SymbolTable/Graphviz/include/: SymbolTableGraphviz.h
SymbolTable/Graphviz/src/: SymbolTableGraphviz.cpp
SymbolTable/include/: ClassInfo.h  MethodInfo.h  SymbolTableBuilder.h  SymbolTree.h  VarInfo.h
SymbolTable/src/: SymbolTableBuilder.cpp  SymbolTree.cpp
SyntaxTree/: CMakeLists.txt
SyntaxTree/Visitors/: CMakeLists.txt
SyntaxTree/Visitors/include/: IRTreeGoal.h  IRTreeTranslator.h  IRTreeWrappers.cpp  IRTreeWrappers.h  SyntaxTreeDFSVisitor.h  SyntaxTreePrinter.h  TypeCheck.h  Visitors.h
SyntaxTree/Visitors/src/: IRTreeTranslator.cpp  SyntaxTreePrinter.cpp  TypeCheck.cpp
SyntaxTree/include/: INodeBase.h  IVisitor.h  Nodes.h  Position.h  Token.h  Tree.h  TreeNodes.h
SyntaxTree/include/DeclarationNode/: DeclarationClassNode.h  DeclarationMethodNode.h  DeclarationVarNode.h  PairTypeIdentifierNode.h
SyntaxTree/include/ExpressionNode/: ExpressionBinaryOperationNode.h  ExpressionBooleanLiteralNode.h  ExpressionGetLengthNode.h  ExpressionIdentifierNode.h  ExpressionIndexNode.h  ExpressionIntegerLiteralNode.h  ExpressionMethodCallNode.h  ExpressionNewArrayNode.h  ExpressionNewNode.h  ExpressionNotOperatorNode.h  ExpressionRoundBracketsNode.h  ExpressionStaticMethodCallNode.h  ExpressionThisNode.h  IExpressionNode.h
SyntaxTree/include/Goal/: GoalNode.h
SyntaxTree/include/GoalNode/: GoalNode.h
SyntaxTree/include/IdentifierNode/: IdentifierNode.h
SyntaxTree/include/StatementNode/: IStatementNode.h  StatementAssignArrayNode.h  StatementAssignNode.h  StatementIfNode.h  StatementMergeNode.h  StatementPrintlnNode.h  StatementReturnNode.h  StatementWhileNode.h
SyntaxTree/include/TemplateNode/: CloneNode.h  ListNode.h
SyntaxTree/include/TypeNode/: ITypeNode.h  TypeArrayNode.h  TypeBooleanNode.h  TypeIntNode.h  TypeStringNode.h  TypeUserNode.h  TypeVoidNode.h
SyntaxTree/src/: Tree.cpp  TreeNodes.cpp
SyntaxTree/src/ExpressionNode/: ExpressionMethodCallNode.cpp
tests/: CMakeLists.txt  IRTreeBlockBuilderUnitTest.cpp  IRTreeCanonizationUnitTest.cpp  IRTreeLinearizationUnitTest.cpp  IRTreeTraceBuilderUnitTest.cpp  IRTreeUnitTest.cpp  LexicalAnalyzUnitTest.cpp  ParserUnitTest.cpp  PrintSymbolTableDot.cpp  PrintSyntaxTreeDot.cpp  RunUnitTest.cpp  SymbolTableTypeCheck.cpp  SymbolTableUnitTest.cpp  main.cpp
tests/BadSamples/: TC_1a.java  TC_2.java  TC_3a(1).java  TC_3a.java  TC_3b.java  TC_4a.java  TC_4b.java
tests/Samples/: BadFactorial.java  EmptyClass.java  Test  TreeVisitor.java
tests/Samples/Digraph/IRTree/: BinarySearch.java.dot  BinaryTree.java.dot  BubbleSort.java.dot  Factorial.java.dot  LinearSearch.java.dot  LinkedList.java.dot  QuickSort.java.dot  Test.dot  TreeVisitor.java.dot
tests/Samples/Digraph/IRTreeBlockBuilder/: BinarySearch.java.dot  BinaryTree.java.dot  BubbleSort.java.dot  Factorial.java.dot  LinearSearch.java.dot  LinkedList.java.dot  QuickSort.java.dot  Test.dot  TreeVisitor.java.dot
tests/Samples/Digraph/IRTreeCanonization/: BinarySearch.java.dot  BinaryTree.java.dot  BubbleSort.java.dot  Factorial.java.dot  LinearSearch.java.dot  LinkedList.java.dot  QuickSort.java.dot  Test.dot  TreeVisitor.java.dot
tests/Samples/Digraph/IRTreeLinearization/: BinarySearch.java.dot  BinaryTree.java.dot  BubbleSort.java.dot  Factorial.java.dot  LinearSearch.java.dot  LinkedList.java.dot  QuickSort.java.dot  Test.dot  TreeVisitor.java.dot
tests/Samples/Digraph/IRTreeTraceBuilder/: BinarySearch.java.dot  BinaryTree.java.dot  BubbleSort.java.dot  Factorial.java.dot  LinearSearch.java.dot  LinkedList.java.dot  QuickSort.java.dot  Test.dot  TreeVisitor.java.dot
(+37 files in other folders)
